@@ -1,3 +1,8 @@
+2006-06-20  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCmdAH.c:	Removed dead code that was old implementation
+	of [format].
+
 2006-06-14  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/tclUnixPort.h (Darwin): support for MAC_OS_X_VERSION_MAX_ALLOWED
